[package]
name = "congressdotgov_rs"
version = "0.2.2"
edition = "2024"
authors = ["Wollaston <matt@wollaston.dev>"]
license = "MIT/Apache-2.0"
description = """
congress.gov API bindings.
"""
repository = "https://github.com/Wollaston/congressdotgov_rs"
readme = "README.md"
keywords = ["congress-gov", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
http = "1.2.0"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
url = "2.5.4"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
